Mise à jour password et redirection

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Page de mot de passe</title>
-  <script src="password.js" defer></script>
+    <meta charset="UTF-8" />
+    <title>Page de connexion</title>
+    <script src="js/password.js" defer></script>
 </head>
 <body>
-  <h1>Entrez le mot de passe</h1>
-  <input type="password" id="motdepasse" placeholder="Mot de passe" />
-  <button id="btnValider">Valider</button>
+    <h1>Entrez le mot de passe</h1>
+    <input type="password" id="passwordInput" placeholder="Mot de passe" />
+    <button onclick="checkPassword()">Valider</button>
 </body>
 </html>
