Mise à jour password et redirection et page d'accueil

--- a/accueil.html
+++ b/accueil.html
@@ -2,18 +2,27 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Accueil</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background: #fff;
-      text-align: center;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Accueil - Mon Site Anniversaire</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Page d'accueil</h1>
-  <p>Bienvenue dans le mini-site d'anniversaire ❤️</p>
+  <header>
+    <h1>Bienvenue sur notre site d'anniversaire ! 🎉</h1>
+    <p>Choisis une énigme pour commencer :</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="enigme1.html">Énigme 1</a></li>
+      <li><a href="enigme2.html">Énigme 2</a></li>
+      <li><a href="enigme3.html">Énigme 3</a></li>
+      <!-- Ajoute ici les liens vers les autres énigmes -->
+    </ul>
+  </nav>
+
+  <footer>
+    <p>Bonne chance et amuse-toi bien ! ❤️</p>
+  </footer>
 </body>
 </html>
