--- a/index.html
+++ b/index.html
@@ -1,13 +1,96 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8" />
-    <title>Page de connexion</title>
-    <script src="js/password.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bienvenue ❤️</title>
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      background: linear-gradient(to bottom, #fff0f5, #ffe4e1);
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+
+    h1 {
+      font-family: 'Parisienne', cursive;
+      font-size: 3em;
+      color: #b22222;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+      color: #555;
+    }
+
+    input[type="password"] {
+      padding: 12px 20px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1em;
+      width: 250px;
+      margin-bottom: 20px;
+    }
+
+    button {
+      padding: 12px 24px;
+      border: none;
+      border-radius: 8px;
+      background-color: #b22222;
+      color: white;
+      font-weight: 600;
+      font-size: 1em;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #8b1a1a;
+    }
+
+    .error {
+      color: red;
+      margin-top: 15px;
+    }
+
+    footer {
+      position: absolute;
+      bottom: 20px;
+      font-size: 0.9em;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
-    <h1>Entrez le mot de passe</h1>
-    <input type="password" id="passwordInput" placeholder="Mot de passe" />
-    <button onclick="checkPassword()">Valider</button>
+  <h1>Bienvenue ❤️</h1>
+  <p>Entre le mot de passe pour commencer notre aventure...</p>
+  <input type="password" id="passwordInput" placeholder="Mot de passe secret" />
+  <br />
+  <button onclick="verifierMotDePasse()">Entrer</button>
+  <div class="error" id="errorMessage"></div>
+
+  <footer>Un site secret pour une personne spéciale ✨</footer>
+
+  <script>
+    function verifierMotDePasse() {
+      const mdp = document.getElementById("passwordInput").value;
+      const message = document.getElementById("errorMessage");
+
+      if (mdp === "test") { // à personnaliser
+        window.location.href = "accueil.html";
+      } else {
+        message.textContent = "Mot de passe incorrect 😢";
+      }
+    }
+  </script>
 </body>
 </html>
