--- a/accueil.html
+++ b/accueil.html
@@ -88,11 +88,23 @@
       font-size: 0.9em;
       color: #aaa;
     }
+
+    .photo-accueil {
+        width: 250px;
+        max-width: 90vw;
+        border-radius: 20px;
+        box-shadow: 0 6px 15px rgba(178, 34, 34, 0.3);
+        margin: 20px 0 40px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
   </style>
 </head>
 <body>
-  <h1>Notre histoire ❤️</h1>
-  <p class="soustitre">Résous chaque énigme pour découvrir le poème final...</p>
+  <h1>A toi de jouer maintenant</h1>
+  <img src="images/image1.jpg" alt="Photo de nous" class="photo-accueil" />
+  <p class="soustitre">Résous chaque énigme pour découvrir le secret...</p>
 
   <div class="grid">
     <a href="enigme1.html" id="link-enigme1">Énigme 1 <span class="checkmark" id="check-enigme1">✅</span></a>
