--- a/enigme1.html
+++ b/enigme1.html
@@ -17,6 +17,8 @@
       justify-content: center;
       min-height: 100vh;
       text-align: center;
+      padding: 20px;
+      position: relative;
     }
 
     h1 {
@@ -50,6 +52,7 @@
       font-weight: 600;
       cursor: pointer;
       transition: background-color 0.3s;
+      margin: 5px;
     }
 
     button:hover {
@@ -66,42 +69,65 @@
       margin-top: 10px;
     }
 
+    #indice {
+      margin-top: 15px;
+      font-style: italic;
+      color: #8b1a1a;
+      display: none;
+      max-width: 600px;
+    }
+
     footer {
       position: absolute;
       bottom: 20px;
       font-size: 0.9em;
       color: #aaa;
+      width: 100%;
+      text-align: center;
     }
   </style>
 </head>
 <body>
   <h1>Énigme 1</h1>
-  <p>Devine la bonne réponse à cette énigme romantique :</p>
-  <p><em>[Mettre ici le texte de l'énigme]</em></p>
+  <p>Devine la bonne réponse pour avancer</p>
+  <p><em>Quel est le nom de mon chat ?</em></p>
 
   <input type="text" id="reponse" placeholder="Ta réponse..." />
   <br />
   <button onclick="verifierReponse()">Valider</button>
+  <button onclick="afficherIndice()">Afficher un indice</button>
   <div id="message" class="error"></div>
+
+  <p id="indice">Courte averse qui laisse place au soleil en tahitien.</p>
 
   <footer>Tu progresses petit à petit vers la récompense...</footer>
 
   <script>
     function verifierReponse() {
-      const bonneReponse = "ok"; // à personnaliser
-      const saisie = document.getElementById("reponse").value.trim().toLowerCase();
-      const message = document.getElementById("message");
+        const bonneReponse = "ueva"; // mettre la réponse en minuscules
+        const saisie = document.getElementById("reponse").value.trim().toLowerCase();
+        const message = document.getElementById("message");
 
-      if (saisie === bonneReponse) {
-        const progress = JSON.parse(localStorage.getItem('progress')) || {};
-        progress['enigme1'] = true; // remplace X par le numéro
-        localStorage.setItem('progress', JSON.stringify(progress));
-        message.className = "success";
-        message.textContent = "Bonne réponse ! Redirection...";
-        setTimeout(() => window.location.href = "accueil.html", 1500);
+        if (saisie === bonneReponse) {
+            const progress = JSON.parse(localStorage.getItem('progress')) || {};
+            progress['enigme1'] = true;
+            localStorage.setItem('progress', JSON.stringify(progress));
+            message.className = "success";
+            message.textContent = "Bonne réponse ! Redirection...";
+            setTimeout(() => window.location.href = "accueil.html", 1500);
+        } else {
+            message.className = "error";
+            message.textContent = "Essaie encore... 🧐";
+        }
+    }
+
+
+    function afficherIndice() {
+      const indice = document.getElementById("indice");
+      if (indice.style.display === "none") {
+        indice.style.display = "block";
       } else {
-        message.className = "error";
-        message.textContent = "Essaie encore... 🧐";
+        indice.style.display = "none";
       }
     }
   </script>
