--- a/enigme7.html
+++ b/enigme7.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Énigme 7</title>
-  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -17,6 +17,8 @@
       justify-content: center;
       min-height: 100vh;
       text-align: center;
+      padding: 20px;
+      position: relative;
     }
 
     h1 {
@@ -26,19 +28,25 @@
       margin-bottom: 20px;
     }
 
-    p {
-      font-size: 1.1em;
-      margin-bottom: 25px;
-      max-width: 600px;
-      color: #555;
+    #puzzle-container {
+      display: grid;
+      grid-template-columns: repeat(3, 100px);
+      grid-template-rows: repeat(3, 100px);
+      gap: 5px;
+      margin: 20px auto;
+      width: 310px;
     }
 
-    input[type="text"] {
-      padding: 12px;
-      width: 250px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      margin-bottom: 20px;
+    .puzzle-piece {
+      width: 100px;
+      height: 100px;
+      background-size: 300px 300px;
+      cursor: grab;
+      border: 2px solid #b22222;
+    }
+
+    .puzzle-piece:active {
+      cursor: grabbing;
     }
 
     button {
@@ -50,6 +58,7 @@
       font-weight: 600;
       cursor: pointer;
       transition: background-color 0.3s;
+      margin: 5px;
     }
 
     button:hover {
@@ -71,39 +80,82 @@
       bottom: 20px;
       font-size: 0.9em;
       color: #aaa;
+      width: 100%;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>Énigme 7</h1>
-  <p>Devine la bonne réponse à cette énigme romantique :</p>
-  <p><em>[Mettre ici le texte de l'énigme]</em></p>
 
-  <input type="text" id="reponse" placeholder="Ta réponse..." />
-  <br />
-  <button onclick="verifierReponse()">Valider</button>
-  <div id="message" class="error"></div>
+  <h1>Énigme 7 : Reconstitue le puzzle</h1>
+  <div id="puzzle-container"></div>
+  <button onclick="verifierPuzzle()">Valider</button>
+  <div id="message"></div>
 
   <footer>Tu progresses petit à petit vers la récompense...</footer>
 
   <script>
-    function verifierReponse() {
-      const bonneReponse = "ok"; // à personnaliser
-      const saisie = document.getElementById("reponse").value.trim().toLowerCase();
-      const message = document.getElementById("message");
+    const puzzleContainer = document.getElementById("puzzle-container");
+    let positions = [...Array(9).keys()];
+    positions.sort(() => Math.random() - 0.5); // Mélanger les morceaux
 
-      if (saisie === bonneReponse) {
-        const progress = JSON.parse(localStorage.getItem('progress')) || {};
-        progress['enigme7'] = true; // remplace X par le numéro
-        localStorage.setItem('progress', JSON.stringify(progress));
+    function createPuzzle() {
+      puzzleContainer.innerHTML = "";
+      positions.forEach((pos, index) => {
+        const piece = document.createElement("div");
+        piece.classList.add("puzzle-piece");
+        piece.style.backgroundImage = "url('images/image6.jpg')"; // Image définie
+        piece.style.backgroundPosition = `${(pos % 3) * -100}px ${(Math.floor(pos / 3)) * -100}px`;
+        piece.dataset.index = index;
+
+        // Drag & Drop
+        piece.draggable = true;
+        piece.addEventListener("dragstart", (e) => {
+          e.dataTransfer.setData("text", index);
+        });
+
+        piece.addEventListener("dragover", (e) => {
+          e.preventDefault();
+        });
+
+        piece.addEventListener("drop", (e) => {
+          e.preventDefault();
+          const draggedIndex = e.dataTransfer.getData("text");
+          [positions[index], positions[draggedIndex]] = [positions[draggedIndex], positions[index]];
+          actualiserAffichage();
+        });
+
+        puzzleContainer.appendChild(piece);
+      });
+    }
+
+    function actualiserAffichage() {
+      document.querySelectorAll(".puzzle-piece").forEach((piece, i) => {
+        const pos = positions[i];
+        piece.style.backgroundPosition = `${(pos % 3) * -100}px ${(Math.floor(pos / 3)) * -100}px`;
+      });
+    }
+
+    function verifierPuzzle() {
+      const message = document.getElementById("message");
+      if (positions.every((val, i) => val === i)) {
         message.className = "success";
         message.textContent = "Bonne réponse ! Redirection...";
+        
+        // Stocker la progression
+        const progress = JSON.parse(localStorage.getItem('progress')) || {};
+        progress['enigme7'] = true;
+        localStorage.setItem('progress', JSON.stringify(progress));
+
         setTimeout(() => window.location.href = "accueil.html", 1500);
       } else {
         message.className = "error";
-        message.textContent = "Essaie encore... 🧐";
+        message.textContent = "Essaie encore... 😉";
       }
     }
+
+    createPuzzle(); // Générer le puzzle automatiquement au chargement de la page
   </script>
+
 </body>
 </html>
