--- a/enigme8.html
+++ b/enigme8.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Énigme 8</title>
-  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -17,6 +17,8 @@
       justify-content: center;
       min-height: 100vh;
       text-align: center;
+      padding: 20px;
+      position: relative;
     }
 
     h1 {
@@ -31,6 +33,22 @@
       margin-bottom: 25px;
       max-width: 600px;
       color: #555;
+    }
+
+    #lettres-melangees {
+      font-size: 1.4em;
+      font-weight: bold;
+      letter-spacing: 4px;
+      margin: 15px;
+      color: #b22222;
+    }
+
+    #lettres-fixees {
+      font-size: 1.4em;
+      font-weight: bold;
+      letter-spacing: 4px;
+      margin: 15px;
+      color: green;
     }
 
     input[type="text"] {
@@ -50,6 +68,7 @@
       font-weight: 600;
       cursor: pointer;
       transition: background-color 0.3s;
+      margin: 5px;
     }
 
     button:hover {
@@ -71,13 +90,18 @@
       bottom: 20px;
       font-size: 0.9em;
       color: #aaa;
+      width: 100%;
+      text-align: center;
     }
   </style>
 </head>
 <body>
+
   <h1>Énigme 8</h1>
-  <p>Devine la bonne réponse à cette énigme romantique :</p>
-  <p><em>[Mettre ici le texte de l'énigme]</em></p>
+  <p>Un phrase à dire avec la main comme ça 🤙</p>
+
+  <p id="lettres-melangees"></p> <!-- Lettres en désordre -->
+  <p id="lettres-fixees"></p> <!-- Lettres fixées en bas -->
 
   <input type="text" id="reponse" placeholder="Ta réponse..." />
   <br />
@@ -87,23 +111,43 @@
   <footer>Tu progresses petit à petit vers la récompense...</footer>
 
   <script>
-    function verifierReponse() {
-      const bonneReponse = "ok"; // à personnaliser
-      const saisie = document.getElementById("reponse").value.trim().toLowerCase();
-      const message = document.getElementById("message");
+    const bonneReponse = "Gravel man !";
+    let lettresMelangees = bonneReponse.split('').sort(() => Math.random() - 0.5);
+    let lettresFixees = Array(bonneReponse.length).fill("");
 
-      if (saisie === bonneReponse) {
-        const progress = JSON.parse(localStorage.getItem('progress')) || {};
-        progress['enigme8'] = true; // remplace X par le numéro
-        localStorage.setItem('progress', JSON.stringify(progress));
-        message.className = "success";
-        message.textContent = "Bonne réponse ! Redirection...";
-        setTimeout(() => window.location.href = "accueil.html", 1500);
-      } else {
-        message.className = "error";
-        message.textContent = "Essaie encore... 🧐";
-      }
+    function afficherLettres() {
+        document.getElementById("lettres-melangees").textContent = lettresMelangees.join("");
+        document.getElementById("lettres-fixees").textContent = lettresFixees.join("");
     }
-  </script>
+
+    function verifierReponse() {
+        const saisie = document.getElementById("reponse").value.trim();
+        const message = document.getElementById("message");
+
+        if (saisie === bonneReponse) {
+            const progress = JSON.parse(localStorage.getItem('progress')) || {};
+            progress['enigme8'] = true;
+            localStorage.setItem('progress', JSON.stringify(progress));
+            message.className = "success";
+            message.textContent = "Bonne réponse ! Redirection...";
+            setTimeout(() => window.location.href = "accueil.html", 1500);
+        } else {
+            message.className = "error";
+            message.textContent = "Essaie encore... 🧐";
+
+            // Trouver la prochaine lettre correcte à fixer
+            let indexFixe = lettresFixees.findIndex(l => l === "");
+            if (indexFixe !== -1) {
+                lettresFixees[indexFixe] = bonneReponse[indexFixe]; // Fixer la lettre correcte
+                lettresMelangees = lettresMelangees.filter(l => l !== bonneReponse[indexFixe]); // Supprimer de la ligne du haut
+            }
+
+            afficherLettres(); // Mettre à jour l'affichage
+        }
+    }
+
+    afficherLettres(); // Afficher les lettres mélangées dès le chargement
+</script>
+
 </body>
 </html>
