--- a/enigme9.html
+++ b/enigme9.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Énigme 9</title>
-  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -17,6 +17,8 @@
       justify-content: center;
       min-height: 100vh;
       text-align: center;
+      padding: 20px;
+      position: relative;
     }
 
     h1 {
@@ -39,6 +41,7 @@
       border-radius: 8px;
       border: 1px solid #ccc;
       margin-bottom: 20px;
+      text-align: center;
     }
 
     button {
@@ -50,6 +53,7 @@
       font-weight: 600;
       cursor: pointer;
       transition: background-color 0.3s;
+      margin: 5px;
     }
 
     button:hover {
@@ -66,44 +70,64 @@
       margin-top: 10px;
     }
 
+    #indice {
+      margin-top: 15px;
+      font-style: italic;
+      color: #8b1a1a;
+      display: none;
+      max-width: 600px;
+    }
+
     footer {
       position: absolute;
       bottom: 20px;
       font-size: 0.9em;
       color: #aaa;
+      width: 100%;
+      text-align: center;
     }
   </style>
 </head>
 <body>
+
   <h1>Énigme 9</h1>
-  <p>Devine la bonne réponse à cette énigme romantique :</p>
-  <p><em>[Mettre ici le texte de l'énigme]</em></p>
+  <p>Quelle chanson j’associe à notre début ?</p>
+  <p><em>Juste le titre de la chanson en minuscules.</em></p>
 
   <input type="text" id="reponse" placeholder="Ta réponse..." />
   <br />
   <button onclick="verifierReponse()">Valider</button>
+  <button onclick="afficherIndice()">Afficher un indice</button>
   <div id="message" class="error"></div>
+
+  <p id="indice">🎸</p>
 
   <footer>Tu progresses petit à petit vers la récompense...</footer>
 
   <script>
     function verifierReponse() {
-      const bonneReponse = "ok"; // à personnaliser
-      const saisie = document.getElementById("reponse").value.trim().toLowerCase();
-      const message = document.getElementById("message");
+        const bonneReponse = "jailhouse rock"; // Réponse en minuscules
+        const saisie = document.getElementById("reponse").value.trim().toLowerCase();
+        const message = document.getElementById("message");
 
-      if (saisie === bonneReponse) {
-        const progress = JSON.parse(localStorage.getItem('progress')) || {};
-        progress['enigme9'] = true; // remplace X par le numéro
-        localStorage.setItem('progress', JSON.stringify(progress));
-        message.className = "success";
-        message.textContent = "Bonne réponse ! Redirection...";
-        setTimeout(() => window.location.href = "accueil.html", 1500);
-      } else {
-        message.className = "error";
-        message.textContent = "Essaie encore... 🧐";
-      }
+        if (saisie === bonneReponse) {
+            const progress = JSON.parse(localStorage.getItem('progress')) || {};
+            progress['enigme9'] = true;
+            localStorage.setItem('progress', JSON.stringify(progress));
+            message.className = "success";
+            message.textContent = "Bonne réponse ! Redirection...";
+            setTimeout(() => window.location.href = "accueil.html", 1500);
+        } else {
+            message.className = "error";
+            message.textContent = "Essaie encore... 🧐";
+        }
+    }
+
+    function afficherIndice() {
+      const indice = document.getElementById("indice");
+      indice.style.display = (indice.style.display === "none") ? "block" : "none";
     }
   </script>
+
 </body>
 </html>
