Mise à jour password et redirection et page d'accueil et pages d'enigmes et poeme enigme 5 finito

--- a/accueil.html
+++ b/accueil.html
@@ -119,12 +119,8 @@
     <a href="enigme10.html" id="link-enigme10">Énigme 10 <span class="checkmark" id="check-enigme10">✅</span></a>
   </div>
 
-  <button id="btnPoeme" onclick="window.location.href='poeme.html'">Lire le poème final ❤️</button>
+  <button id="btnPoeme" onclick="window.location.href='poeme.html'">Un poème pour finir ❤️</button>
   <button id="btnReset" onclick="localStorage.clear(); location.reload()">Réinitialiser le progrès</button>
-
-  <footer>
-    Ce site est un petit voyage dans notre histoire ✨
-  </footer>
 
   <script>
     const enigmes = Array.from({ length: 10 }, (_, i) => `enigme${i + 1}`);
