Mise à jour password et redirection et page d'accueil et pages d'enigmes et poeme enigme 5 finito pour de vrai

--- a/enigme4.html
+++ b/enigme4.html
@@ -106,10 +106,10 @@
 <body>
   <h1>Énigme 4</h1>
   <p>
-    Pars de ton année de naissance. <br />Je commence par la multiplier par 1000, puis j'ajoute 18, puis 5, et je multiplie le tout par 9000.<br />
-    Ensuite, je retranche 162000000. Puis j'ajoute 1000.<br />
-    Je retranche encore 25000, puis 500.<br />
-    Enfin, je finis en ajoutant mon année de naissance.<br />
+    Pars de ton année de naissance. <br />Commence par lui ajouter l'âge que ça te fait aujourd'hui et multiplier le tout par 1000.<br />
+    Ensuite, ajoute 10 000 000, puis divise par 5.<br />
+    Ajoute 6 620 000, puis divise par 1 et multiplie par 2.<br />
+    Enfin, finis en ajoutant ton année de naissance.<br />
     Quel est donc mon nombre préféré ?
   </p>
 
